--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -7,3 +7,11 @@ description: |
   It's fast, flexible, and reliable — with zero-runtime.
 full: true
 ---
+
+## 安装方式
+
+### 使用 Vite 安装
+
+```bash
+npm install @tailwindcss/vite
+```
