--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -7,3 +7,95 @@ description: |
   It's fast, flexible, and reliable — with zero-runtime.
 full: true
 ---
+
+## Installation
+
+<Tabs
+  items={[
+    "Using Vite",
+    "Using PostCSS",
+    "Tailwind CLI",
+    "Framework Guides",
+    "Play CDN",
+  ]}
+>
+  <Tab value="Using Vite">
+    Installing Tailwind CSS as a Vite plugin is the most seamless way to
+    integrate it with frameworks like Laravel, SvelteKit, React Router, Nuxt,
+    and SolidJS.
+
+    <Steps>
+      <Step>
+        <StepTitle>Install Tailwind CSS</StepTitle>
+        <StepDescription>Install `tailwindcss` and `@tailwindcss/vite` via npm.</StepDescription>
+        <StepContent>
+          ```bash title="Terminal"
+          npm install tailwindcss @tailwindcss/vite
+          ```
+        </StepContent>
+      </Step>
+
+      <Step>
+        <StepTitle>Configure the Vite plugin</StepTitle>
+        <StepDescription>Add the `@tailwindcss/vite` plugin to your Vite configuration.</StepDescription>
+        <StepContent>
+          ```ts title="vite.config.ts"
+          import { defineConfig } from 'vite'
+          import tailwindcss from '@tailwindcss/vite'
+
+          export default defineConfig({
+            plugins: [
+              tailwindcss(),
+            ],
+          })
+          ```
+        </StepContent>
+      </Step>
+
+      <Step>
+        <StepTitle>Import Tailwind CSS</StepTitle>
+        <StepDescription>Add an `@import` to your CSS file that imports Tailwind CSS.</StepDescription>
+        <StepContent>
+          ```css title="CSS"
+          @import "tailwindcss";
+          ```
+        </StepContent>
+      </Step>
+
+      <Step>
+        <StepTitle>Start your build process</StepTitle>
+        <StepDescription>Run your build process with `npm run dev` or whatever command is configured in your `package.json` file.</StepDescription>
+        <StepContent>
+          ```bash title="Terminal"
+          npm run dev
+          ```
+        </StepContent>
+      </Step>
+
+      <Step>
+        <StepTitle>Start using Tailwind in your HTML</StepTitle>
+        <StepDescription>Make sure your compiled CSS is included in the `<head>` (your framework might handle this for you), then start using Tailwind’s utility classes to style your content.</StepDescription>
+        <StepContent>
+          ```html title="HTML"
+          <!doctype html>
+          <html>
+          <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link href="/src/styles.css" rel="stylesheet">
+          </head>
+          <body>
+            <h1 class="text-3xl font-bold underline">
+              Hello world!
+            </h1>
+          </body>
+          </html>
+          ```
+        </StepContent>
+      </Step>
+    </Steps>
+
+  </Tab>
+
+  <Tab value="Using PostCSS">b</Tab>
+</Tabs>
