feat: add TabDescription component and update getting-started.md to include descriptions for each tab

--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -20,9 +20,11 @@ full: true
   ]}
 >
   <Tab value="Using Vite">
-    Installing Tailwind CSS as a Vite plugin is the most seamless way to
-    integrate it with frameworks like Laravel, SvelteKit, React Router, Nuxt,
-    and SolidJS.
+    <TabDescription>
+      Installing Tailwind CSS as a Vite plugin is the most seamless way to
+      integrate it with frameworks like Laravel, SvelteKit, React Router, Nuxt,
+      and SolidJS.
+    </TabDescription>
 
     <Steps>
       <Step>
@@ -97,5 +99,32 @@ full: true
 
   </Tab>
 
-  <Tab value="Using PostCSS">b</Tab>
+<Tab value="Using PostCSS">
+  <TabDescription>
+    Installing Tailwind CSS as a PostCSS plugin is the most seamless way to
+    integrate it with frameworks like Next.js and Angular.
+  </TabDescription>
+</Tab>
+
+<Tab value="Tailwind CLI">
+  <TabDescription>
+    The simplest and fastest way to get up and running with Tailwind CSS from
+    scratch is with the Tailwind CLI tool. The CLI is also available as a
+    [standalone executable](https://tailwindcss.com/blog/standalone-cli) if you
+    want to use it without installing Node.js.
+  </TabDescription>
+</Tab>
+
+<Tab value="Framework Guides">
+  <TabDescription>
+    Framework-specific guides that cover our recommended approach to installing
+    Tailwind CSS in a number of popular environments.
+  </TabDescription>
+</Tab>
+
+  <Tab value="Play CDN">
+    <TabDescription>
+      Use the Play CDN to try Tailwind right in the browser without any build step. The Play CDN is designed for development purposes only, and is not intended for production.
+    </TabDescription>
+  </Tab>
 </Tabs>
