feat: add upgrade guide and update getting started documentation

--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -31,7 +31,7 @@ full: true
         <StepTitle>Install Tailwind CSS</StepTitle>
         <StepDescription>Install `tailwindcss` and `@tailwindcss/vite` via npm.</StepDescription>
         <StepContent>
-          ```bash title="Terminal"
+          ```sh title="Terminal"
           npm install tailwindcss @tailwindcss/vite
           ```
         </StepContent>
@@ -68,7 +68,7 @@ full: true
         <StepTitle>Start your build process</StepTitle>
         <StepDescription>Run your build process with `npm run dev` or whatever command is configured in your `package.json` file.</StepDescription>
         <StepContent>
-          ```bash title="Terminal"
+          ```sh title="Terminal"
           npm run dev
           ```
         </StepContent>
